--- a/slnMVC5Course/Vidly.Web/Vidly.Web.csproj
+++ b/slnMVC5Course/Vidly.Web/Vidly.Web.csproj
@@ -19,7 +19,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44352</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -203,8 +203,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Constants\RoleName.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
+    <Compile Include="Controllers\Api\MoviesController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -260,6 +262,14 @@
     <Compile Include="Migrations\201802230145469_CreatingValidations.cs" />
     <Compile Include="Migrations\201802230145469_CreatingValidations.Designer.cs">
       <DependentUpon>201802230145469_CreatingValidations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802241029434_SeedUsers.cs" />
+    <Compile Include="Migrations\201802241029434_SeedUsers.Designer.cs">
+      <DependentUpon>201802241029434_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802241107352_AddingDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201802241107352_AddingDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201802241107352_AddingDrivingLicenseToApplicationUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -514,10 +524,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -569,6 +580,12 @@
     <EmbeddedResource Include="Migrations\201802230145469_CreatingValidations.resx">
       <DependentUpon>201802230145469_CreatingValidations.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802241029434_SeedUsers.resx">
+      <DependentUpon>201802241029434_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802241107352_AddingDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201802241107352_AddingDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -588,7 +605,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>57741</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:57695/</IISUrl>
+          <IISUrl>https://localhost:44352/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
