--- a/slnMVC5Course/Vidly.Web/Web.config
+++ b/slnMVC5Course/Vidly.Web/Web.config
@@ -18,6 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On"></customErrors>
     <sessionState mode="Off"></sessionState>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.2" />
